Changelog
=========

2.5 (unreleased)
----------------

- Add uninstall profile.
  [thet]


2.4 (2016-08-02)
----------------

- Show google api key field in controlpanel and also use it.
  Since 22th June 2016 goolge map api shows an annoying MissingKeyMapError
  Pop-up if for new domains and localhost if you don't provide a valid api key.
  [mathias.leimgruber]


2.3 (2015-11-17)
----------------

- Updated classifiers list for package
  [macagua]

- Updated spanish translation
  [macagua]


2.2 (2015-05-02)
----------------

- Added more french translations
  [tiazma]

- Precised translation domian in macro context
  [tiazma]

- Fixed error occurring when no location found
  [tiazma]


2.1.3 (2014-08-16)
------------------

- Bug fix, utils check is a object use "use_custom_styles",
  if not sytles are take from global styles
  [bsuttor]

- Updated classifiers list for package
  [macagua]

- Updated Spanish translation
  [macagua]

- Use getMultiAdapter instead of restrictedTraverse in Views
  [gborelli]


2.1.2 (2014-03-16)
------------------

- Add content type location's attribute as default value
  for geocoding input field
  [gborelli]

- Fix #14 - GeoCoderView
  [gborelli]


2.1.1 (2014-02-26)
------------------

- Fix geopy version; geopy 0.98.1 is currently broken
  [gborelli]


2.1 (2014-02-26)
----------------

- Moved collective_geo_styles metadata and related indexer
  from c.geo.contentlocations
  [gborelli]

- Added get_feature_styles method to retrieve map styles
  [gborelli]

- Fixed google.GQueryError ImportError
  [Jian Aijun]

- Updated German translation.
  [href]


2.0 (2013-10-29)
----------------

- Change package layout
  [gborelli]

- Re-adds previously used maxResolution and maxExtent options, fixing issues
  with certain WMTS services. [href]


2.0b1 (2013-06-02)
------------------

- move IGeoCoder utility from c.geo.mapwidget
  [gborelli]

- Prevent multiple inclusions of Google maps and Bing javascripts
  [gborelli]
