@@ -8,6 +8,7 @@ from zope.schema import getFields
 from zope.component import getUtility
 from Products.CMFCore import DirectoryView
 
+from plone import api
 from plone.registry.interfaces import IRegistry
 from collective.geo.settings.interfaces import IGeoFeatureStyle
 
@@ -70,9 +71,12 @@ class GeoCoderUtility(object):
     implements(IGeoCoder)
 
     def retrieve(self, address=None, google_api=None, language=None):
-        # TODO: fix google_api > secret_key and client_id parameters
-        # See https://github.com/geopy/geopy/blob/master/geopy/geocoders/googlev3.py#L31
-        self.geocoder = geocoders.GoogleV3()
+        if google_api is None:
+            google_api = api.portal.get_registry_record(
+                'collective.geo.settings.interfaces.IGeoSettings.googleapi',
+                default=None,
+            )
+        self.geocoder = geocoders.GoogleV3(api_key=google_api)
 
         if not address:
             raise GeocoderQueryError
